noinst_LIBRARIES = libcommon.a

libcommon_a_CPPFLAGS = -I$(top_srcdir)

libcommon_a_SOURCES = \
	BloomFilter.cpp BloomFilter.h \
	BloomFilterInfo.cpp BloomFilterInfo.h \
	city.cc city.h citycrc.h\
	ConstString.h \
	ContigID.h \
	ContigNode.h \
	ContigProperties.h \
	Dictionary.h \
	Dynamicofstream.cpp Dynamicofstream.h \
	Estimate.h \
	Fcontrol.cpp Fcontrol.h \
	Fisher.h \
	gzstream.C gzstream.h \
	HashFunction.h \
	IOUtil.h \
	MapUtil.h \
	Options.cpp Options.h \
	PairHash.h \
	ReadsProcessor.cpp ReadsProcessor.h \
	SeqEval.h \
	Sequence.cpp Sequence.h \
	SetUtil.h \
	SignalHandler.cpp SignalHandler.h \
	StatUtil.h \
	StringUtil.h \
	Uncompress.cpp Uncompress.h
