check_PROGRAMS = StatUtilTest
StatUtilTest_SOURCES = \
	$(top_srcdir)/ThirdParty/Catch/catch.hpp \
	StatUtilTest.cpp

check_PROGRAMS += MapUtilTest
MapUtilTest_SOURCES = \
	$(top_srcdir)/ThirdParty/Catch/catch.hpp \
	MapUtilTest.cpp

check_PROGRAMS += SAMUtilTest
SAMUtilTest_SOURCES = \
	$(top_srcdir)/ThirdParty/Catch/catch.hpp \
	SAMUtilTest.cpp

check_PROGRAMS += SegmentTest
SegmentTest_SOURCES = \
	$(top_srcdir)/ThirdParty/Catch/catch.hpp \
	SegmentTest.cpp

check_PROGRAMS += SetUtilTest
SetUtilTest_SOURCES = \
	$(top_srcdir)/ThirdParty/Catch/catch.hpp \
	SetUtilTest.cpp

TESTS = $(check_PROGRAMS)
