check_PROGRAMS = StatUtilTest
StatUtilTest_SOURCES = \
	$(top_srcdir)/ThirdParty/Catch/catch.hpp \
	StatUtilTest.cpp

check_PROGRAMS += MapUtilTest
MapUtilTest_SOURCES = \
	$(top_srcdir)/ThirdParty/Catch/catch.hpp \
	MapUtilTest.cpp

check_PROGRAMS += ParseUtilTest
ParseUtilTest_SOURCES = \
	$(top_srcdir)/ThirdParty/Catch/catch.hpp \
	ParseUtilTest.cpp

TESTS = $(check_PROGRAMS)
