check_PROGRAMS = StatUtilTest
StatUtilTest_SOURCES = \
	$(top_srcdir)/ThirdParty/Catch/catch.hpp \
	StatUtilTest.cpp

check_PROGRAMS += MapUtilTest
MapUtilTest_SOURCES = \
	$(top_srcdir)/ThirdParty/Catch/catch.hpp \
	MapUtilTest.cpp

check_PROGRAMS += SAMTest
SAMTest_SOURCES = \
	$(top_srcdir)/ThirdParty/Catch/catch.hpp \
	SAMTest.cpp

TESTS = $(check_PROGRAMS)
